--- a/index.html
+++ b/index.html
@@ -39,10 +39,13 @@
             </section>
             <section id = "form" class = "hide">
                 <h2 id = message></h2>
-                <input type="text">
+                <p id = initials></p>
+                <input type="text" id="input" placeholder="ASS"/>
+                <button id="submit">YES</button>
             </section>
-            <section id = "scores" class = "hide">
-                
+            <section id = "scores-area" class = "hide">
+                <h2>best people</h2>
+                <ol></ol>
             </section>
             <section id="feedback">
                 
