--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
             </section>
             <section id = "scores-area" class = "hide">
                 <h2>best people</h2>
-                <ol></ol>
+                <ol id="scorelist"></ol>
+                <button id="reload">thank you sir may i have another</button>
             </section>
             <section id="feedback">
                 
